<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/headTextView"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="277dp"
        android:layout_height="75dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="Enter decimal number to convert"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#8E24AA"
        app:layout_constraintStart_toStartOf="@+id/headTextView"
        app:layout_constraintTop_toBottomOf="@+id/headTextView" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginBottom="68dp"
        android:text="Convert Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fromTxt"
        android:layout_width="328dp"
        android:layout_height="74dp"
        android:layout_marginStart="32dp"
        android:text="@string/from"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/toTxt"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fromTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

</androidx.constraintlayout.widget.ConstraintLayout>